add info about Configuration to README.md